objects/FinServ__GroupMemberSetting__mdt.object
<CustomObject>
    <description>Indicates the Group Member Settings</description>
    <fields>
        <fullName>FinServ__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if group member setting entry is active or not</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__EditButtonCustomName__c</fullName>
        <description>Indicates the custom label name of the Edit button</description>
        <label>Edit Button Custom Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__EditComponentName__c</fullName>
        <description>Indicates the component name to be invoked for the Edit action.The component name should include namespace like NS:CMPNAME</description>
        <label>Edit Component Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__HideRecordActions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the record actions has to be hidden</description>
        <label>Hide Record Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__NewButtonCustomName__c</fullName>
        <description>Indicates the custom label name of the New button</description>
        <label>New Button Custom Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__NewComponentName__c</fullName>
        <description>Indicates the component name to be invoked for the New action</description>
        <label>New Component Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Group Member Setting</label>
    <pluralLabel>Group Member Settings</pluralLabel>
</CustomObject>